--- a/templates/blog/sidebar.html
+++ b/templates/blog/sidebar.html
@@ -50,7 +50,7 @@
             <li>
                 <div class="sidebar__comments-icon"> <i class="fas fa-comments"></i> </div>
                 <div class="sidebar__comments-text-box">
-                    <p>{{ recent_comment.author.get_full_name|default:'No Name' }} commenter on <br>
+                    <p>{{ recent_comment.author.get_full_name|default:'No Name' }} commenter on 
                         {{ recent_comment.post|truncatechars:25 }}
                     </p>
                 </div>
