--- a/templates/search.html
+++ b/templates/search.html
@@ -128,7 +128,7 @@
 	</section>
 	<!--End Project Section -->
 {% endif %}
-   {% if testimonies %}
+{% if testimonies %}
 	<!-- Testimonial Section -->
 	<section class="testimonial-section">
 		<div class="auto-container">
@@ -159,12 +159,12 @@
 										{{ testimony.message|linebreaks }}
 									</div>
 									<div class="info-box">
-										<h4 class="name">{{ testimony.name }}</h4>
+										<h4 class="name">{{ testimony.author.get_full_name|default:'No Name' }}</h4>
 										<span class="designation">{{ testimony.position }}</span>
 									</div>
 								</div>
 								<div class="image-column col-lg-6 col-md-12">
-									<figure class="image" ><img class="rounded rounded-circle" src="{% if testimony.image %}{{ testimony.image.url }}{% else %}/static/images/resource/testimonial-1.png{% endif %}" alt="{{ testimony.name }}"></figure>
+									<figure class="image" ><img class="rounded rounded-circle" src="{% if testimony.author.profile.image %}{{ testimony.author.profile.image.url }}{% else %}/static/images/resource/testimonial-1.png{% endif %}" alt="{{ testimony.name }}"></figure>
 								</div>
 							</div>
 						</div>
@@ -181,7 +181,7 @@
 					<div class="swiper-wrapper">
 						{% for testimony in testimonies %}
 							<div class="swiper-slide testimonial-thumb">
-								<figure class="image"><img src="{% if testimony.image %}{{ testimony.image.url }}{% else %}/static/images/resource/testimonial-1.png{% endif %}" alt="{{ testimony.name }}"></figure>
+								<figure class="image"><img src="{% if testimony.author.profile.image %}{{ testimony.author.profile.image.url }}{% else %}/static/images/resource/testimonial-1.png{% endif %}" alt="{{ testimony.name }}"></figure>
 							</div>
 						{% endfor %}
 					</div>
