--- a/templates/services/details.html
+++ b/templates/services/details.html
@@ -38,7 +38,7 @@
 								<i class="lnr lnr-icon-pie-chart"></i>
 							</div>
 							<h3>View VSTech Profile</h3>
-							<a href="{% url 'contact' %}" class="theme-btn btn-style-two bg-light"><span class="btn-title text-black"> Contact us</span></a>
+							<a href="/static/VSTech Portfolio.pdf" class="theme-btn btn-style-two bg-light"><span class="btn-title text-black"> View</span></a>
 							</div>
 						</div>
 						</div>
@@ -47,7 +47,7 @@
 						<div class="sidebar-widget service-sidebar-single mt-5">
 							<div class="service-sidebar-single-btn wow fadeInUp"
 								data-wow-delay="0.5s" data-wow-duration="1200m">
-								<a href="#" class="theme-btn btn-style-one d-grid"><span class="btn-title"><span class="fas fa-file-pdf"></span> download pdf file</span></a>
+								<a href="/static/VSTech Portfolio.pdf" class="theme-btn btn-style-one d-grid" download><span class="btn-title"><span class="fas fa-file-pdf"></span> download pdf file</span></a>
 							</div>
 						</div>
 						<!--End Services Details Sidebar Single-->
