--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -11,7 +11,7 @@
   </head>
   <body class="bg-light">
     <div class="container">
-      <div class="row align-items-center justify-content-center" style="height:80vh">
+      <div class="row align-items-center justify-content-center p-4" style="height:80vh">
         <div class="col-lg-4 col-md-8 col-sm-12 shadow-sm p-3 bg-white">
           <div class="py-2 px-4 text-center">
             <img src="/static/images/logo-3.png" alt="VSTech Limited" title="VSTech Limited Logo" class="img-fluid">
