--- a/templates/partials/messages.html
+++ b/templates/partials/messages.html
@@ -1,7 +1,7 @@
 {% if messages %}
-<div class="container mt-4">
+<div class="container-fluid m-0">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-6">
             {% for message in messages %}
             <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
                 {{ message }}
