doen with home 1, 2 & 3

--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
 						  </div>
 
 						<div class="btm-box">
-							<a href="{% url 'services:list' %}" class="theme-btn btn-style-one"><span class="btn-title">Discover more</span></a>
+							<a href="/static/VSTech Portfolio.pdf" class="theme-btn btn-style-one"><span class="btn-title">Discover more</span></a>
 						</div>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 				<div class="feature-block-two dark col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-054-graph"></i>
-						<h6 class="title"><a href="#">Capital Markets</a></h6>
+						<h6 class="title"><a href="#">Businesses</a></h6>
 					</div>
 				</div>
 
