--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
 {% block meta %}
 
 {% endblock %}
+<meta name="author" content="Jeff Odhiambo">
 <title>{% block title %}{% endblock %}</title>
 <!-- Stylesheets -->
 {% include 'partials/css.html' %}
