--- a/templates/index/4.html
+++ b/templates/index/4.html
@@ -857,7 +857,7 @@
 				<div class="feature-block-two dark col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp" data-wow-delay="800ms">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-054-graph"></i>
-						<h6 class="title"><a href="page-service-details/">Capital Markets</a></h6>
+						<h6 class="title"><a href="page-service-details/">Businesses</a></h6>
 					</div>
 				</div>
 
@@ -1115,7 +1115,7 @@
 						<div class="contact-info-box-two">
 							<span class="icon fa fa-map-marker-alt"></span>
 							<h6 class="title">Visit Us</h6>
-							<div class="text">{{ about.address|default:'52106 00100 Nairobi' }}</div>
+							<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 						</div>
 
 						<div class="contact-info-box-two">
@@ -1233,7 +1233,7 @@
 						<div class="footer-widget contact-widget">
 							<h3 class="widget-title">Contact</h3>
 							<div class="widget-content">
-								<div class="text">{{ about.address|default:'52106 00100 Nairobi' }}</div>
+								<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 								<ul class="contact-info">
 									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
 									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
