--- a/templates/partials/css.html
+++ b/templates/partials/css.html
@@ -2,3 +2,6 @@
 <!-- <link href="/static/css/style-app4.css" rel="stylesheet"> -->
 <link href="/static/css/style.css" rel="stylesheet">
 <link href="/static/css/responsive.css" rel="stylesheet">
+
+<!-- Dark Theme -->
+<link href="" id="themeLink" rel="stylesheet">
