--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -119,7 +119,7 @@
                         <h3 class="widget-title">Contact</h3>
                         <div class="widget-content">
                             <div class="text">
-                                {{ about.address|default:'52106 00100 Nairobi' }}
+                                {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}
                                 <div class="contact-info-box">
                                     <span class="icon lnr-icon-clock"></span>
                                     <span class="title">Opened:</span>
