--- a/templates/search.html
+++ b/templates/search.html
@@ -112,7 +112,7 @@
 					<div class="project-block">
 						<div class="inner-box">
 							<div class="image-box">
-								<figure class="image"><a href="{% if project.front_image %}{{ project.front_image.url }}{% else %}/static/images/resource/project-1.jpg{% endif %}" class="lightbox-image"><img src="{% if project.front_image %}{{ project.front_image.url }}{% else %}/static/images/resource/project-1.jpg{% endif %}" alt=""></a></figure>
+								<figure class="image"><a href="{{ project.get_absolute_url }}" class="lightbox-image"><img src="{% if project.front_image %}{{ project.front_image.url }}{% else %}/static/images/resource/project-1.jpg{% endif %}" alt=""></a></figure>
 								<a href="{{ project.get_absolute_url }}" class="icon"><i class="fa fa-long-arrow-alt-right"></i></a>
 							</div>
 							<div class="content-box">
@@ -133,7 +133,7 @@
 	<section class="testimonial-section">
 		<div class="auto-container">
 			<div class="sec-title">
-				<span class="sub-title">Our feedbakcs</span>
+				<span class="sub-title">Our feedbacks</span>
 				<h2>What They Say<br> About Our Company</h2>
 			</div>
 			<div class="testimonials">
@@ -200,7 +200,7 @@
 		</div>
 		<div class="auto-container">
 			<div class="sec-title text-center">
-				<span class="sub-title">Our feedbakcs</span>
+				<span class="sub-title">Our feedbacks</span>
 				<h2>EXPERTS READY TO SURVE</h2>
 			</div>
 
