--- a/templates/index/1.html
+++ b/templates/index/1.html
@@ -3,18 +3,7 @@
 
 <!-- index,  18:17:52 GMT -->
 <head>
-    <!-- Responsive -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-    <meta name="title" content="VSTech Limited - Innovative Software Solutions for Businesses">
-    <meta name="keywords" content="vstech, vs tech, vs-tech, software company, vstech limited, vstech homepage, homepage, home, software firms, software development, IT cunsultation, tech company, software company, innovative solutions, productivity, efficiency, industries, healthcare, finance, retail, government, education, best, company, tech">
-    <meta name="description" content="VSTech Limited is a leading software company that provides innovative solutions to help businesses maximize productivity and efficiency. We offer a wide range of products and services to industries such as healthcare, finance, retail, government, and education.">
-
-    <meta name="next-head-count" content="5" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>VSTech Limited - Innovative Software Solutions for Businesses</title>
+	{% include 'partials/home_meta.html' %}
 
 	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/static/plugins/revolution/css/settings.css" rel="stylesheet" type="text/css">
@@ -439,7 +428,7 @@
 		{% if testimonies %}
 		<div class="auto-container">
 			<div class="sec-title">
-				<span class="sub-title">Our feedbakcs</span>
+				<span class="sub-title">Our feedbacks</span>
 				<h2>What They Say<br> About Our Company</h2>
 			</div>
 			<div class="testimonials">
@@ -580,7 +569,7 @@
 		</div>
 		<div class="auto-container">
 			<div class="sec-title text-center">
-				<span class="sub-title">Our feedbakcs</span>
+				<span class="sub-title">Our feedbacks</span>
 				<h2>EXPERTS READY TO SURVE</h2>
 			</div>
 
@@ -714,48 +703,7 @@
 		</div>
 	</section>
 	<!--End FAQ Section -->
-{% if blogs %}
-	<!-- News Section -->
-	<section class="news-section">
-		<div class="auto-container">
-			<div class="sec-title text-center">
-				<span class="sub-title">from the blog</span>
-				<h2>News & Articles</h2>
-			</div>
-
-			<div class="row">
-				{% for blog in blogs %}
-					<!-- News Block -->
-					<div class="news-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
-						<div class="inner-box">
-							<div class="image-box">
-								<figure class="image"><a href="{{ blog.get_absolute_url }}"><img src="{% if blog.front_image %} {{blog.front_image.url }} {% else %}/static/images/resource/news-1.jpg{% endif %}" alt="{{ blog }}" title="{{ blog }}"></a></figure>
-								<span class="date"><b>{{ blog.published_date|date:'d' }}</b> {{ blog.published_date|date:'M' }}</span>
-							</div>
-							<div class="content-box">
-								<ul class="post-info">
-									<li><i class="fa fa-user"></i> by {{ blog.author.get_full_name|default:'No Name' }}</li>
-									<li><i class="fa fa-tag"></i> {{ blog.category }}</li>
-								</ul>
-								<h4 class="title"><a href="{{ blog.get_absolute_url }}">{{ blog.title|truncatechars:35 }}</a></h4>
-							</div>
-							<div class="bottom-box">
-								<a href="{{ blog.get_absolute_url }}" class="read-more">Read More <i class="fa fa-long-arrow-alt-right"></i></a>
-								<div class="comments">
-									<i class="fa fa-eye" aria-hidden="true"></i> {{ blog.views }}
-									<a href="{% url 'blog:like_post' blog.slug %}"><i class="fa fa-thumbs-up" aria-hidden="true"></i></a> {{ blog.likes }}
-									<a href="{% url 'blog:dislike_post' blog.slug %}"><i class="fa fa-thumbs-down" aria-hidden="true"></i></a> {{ blog.dislikes }}
-									<i class="fa fa-comments"></i> {{ blog.comments.all.count }}
-								</div>
-							</div>
-						</div>
-					</div>
-				{% endfor%}
-			</div>
-		</div>
-	</section>
-	<!--End News Section -->
-{% endif %}
+	{% include 'partials/blogs.html' %}
 	<!-- Call To Action Two -->
 	<section class="call-to-action-two p-0">
 		<div class="auto-container">
