--- a/templates/partials/js.html
+++ b/templates/partials/js.html
@@ -9,3 +9,4 @@
 <script src="/static/js/swiper.min.js"></script>
 <script src="/static/js/owl.js"></script>
 <script src="/static/js/script.js"></script>
+{% include 'partials/theme-script.html' %}
