done with homepage

--- a/templates/index/1.html
+++ b/templates/index/1.html
@@ -290,7 +290,9 @@
 						<div class="sec-title">
 							<span class="sub-title">About Our Company</span>
 							<h2>ITS TIME TO GET STARTED!</h2>
-							<div class="text">VSTech is a leading software company providing innovative solutions for maximizing productivity and efficiency. With a focus on quality, we offer customized software solutions for various industries. Our goal is to deliver advanced and efficient software, tailored to each client's needs.</div>
+							<div class="text">
+								VSTech is a leading software company providing innovative solutions for maximizing productivity and efficiency. With a focus on quality, we offer customized software solutions for various industries. Our goal is to deliver advanced and efficient software, tailored to each client's needs.
+							</div>
 						</div>
 
 						<div class="content-box">
