--- a/templates/partials/projects/1.html
+++ b/templates/partials/projects/1.html
@@ -9,7 +9,9 @@
 						<h2>Improve & Enhance the <br>Tech Projects</h2>
 					</div>
 					<div class="col-lg-5">
-						<div class="text">Our team excels at improving and enhancing tech projects. We optimize systems, refine functionalities, and introduce innovative solutions. Leveraging cutting-edge technologies, we ensure highly efficient and effective outcomes for our clients.</div>
+						<div class="text">
+							Our team excels at improving and enhancing tech projects. We optimize systems, refine functionalities, and introduce innovative solutions. Leveraging cutting-edge technologies, we ensure highly efficient and effective outcomes for our clients.
+						</div>
 					</div>
 				</div>
 			</div>
