done with shop home page

--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -4,8 +4,12 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% block meta %}
+
+    {% endblock %}
+    <meta name="author" content="Jeff Odhiambo">
     {% include 'partials/css.html' %}
-    <title>{% block head_title %}{% endblock %}</title>
+    <title>{% block head_title %}{% endblock %} - Accounts- VSTech Limited</title>
     {% block extra_head %}
     {% endblock %}
   </head>
