--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -178,8 +178,7 @@
 		<div class="footer-bottom">
 			<div class="auto-container">
 				<div class="inner-container d-flex" style="background-color: unset;">
-					<div class="copyright-text text-white">© {{ current_year }} <a href="/">VSTech Limited</a>. All Rights Reserved
-					</div>
+					<div class="copyright-text text-white">© {{ current_year }} <a href="/">VSTech Limited</a>. All Rights Reserved</div>
 					
 					<ul class="social-icon-two ms-auto">
 						<li><a href="#"><i class="fab fa-twitter"></i></a></li>
