--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -2,12 +2,21 @@
 
 {% load i18n %}
 {% load crispy_forms_tags %}
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block meta %}
+  <meta name="title" content="VSTech Limited - Sign Up">
+  <meta name="keywords" content="sign up, register, create account, VSTech Limited, software development, e-learning, shopping, consultation">
+  <meta name="description" content="Create your VSTech Limited account and enjoy a personalized experience across software development, e-learning, shopping, and consultation. Sign up now to access exclusive offers, manage your orders, and explore a wide range of services.">
+  meta_title = ""
+meta_keywords = "sign up, register, create account, electronic shop sign up"
+meta_description = "Create your VSTech Limited account and enjoy a personalized shopping experience. Sign up now to access exclusive offers and manage your orders."
+
+{% endblock %}
+{% block head_title %}{% trans "Register" %}{% endblock %}
 
 {% block content %}
 <h2 class="text-center">{% trans "Sign Up" %}</h2>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">Login</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
@@ -15,7 +24,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit" class="theme-btn btn-style-one w-100">{% trans "Sign Up" %} &raquo;</button>
+  <button type="submit" class="theme-btn btn-style-one w-100">{% trans "Register" %}</button>
 </form>
 
 {% endblock %}
