--- a/templates/shop/products/1.html
+++ b/templates/shop/products/1.html
@@ -1,6 +1,10 @@
 {% extends 'shop/base.html' %}
+{% block title %}{{ title|default:'VSTech Limited - Your Ultimate Electronics Shop' }} - VSTech Limited {% endblock %}
 {% block meta %}
-
+<meta name="title" content="VSTech Limited - Your Ultimate Electronics Shop">
+<meta name="keywords" content="electronics, gadgets, technology, laptops, Apple, MacBooks, HP, online shop">
+<meta name="description" content="Discover the latest electronics and gadgets at VSTech Limited. Shop a wide range of high-quality products and accessories, including laptops, Apple devices, MacBooks, HP laptops, and more.">
+<meta name="author" content="Jeff Odhiambo">
 {% endblock %}
 {% block content %}
 	<!-- Featured Products -->
@@ -11,28 +15,27 @@
 				<div class="col-lg-3 col-md-12 col-sm-12">
 					<div class="shop-sidebar">
 						<div class="sidebar-search">
-							<form action="https://kodesolution.com/html/2022/oitech-html/shop-products.html" method="post" class="search-form">
+							<form action="" method="GET" class="search-form">
 								<div class="form-group">
-									<input type="search" name="search-field" placeholder="Search..." required="">
-									<button><i class="lnr lnr-icon-search"></i></button>
+									<input type="search" name="q" placeholder="Search..." required>
+									<button type="submit"><i class="lnr lnr-icon-search"></i></button>
 								</div>
 							</form>
 						</div>
+						{% if brands %}
 						<div class="sidebar-widget category-widget">
 							<div class="widget-title">
-								<h5 class="widget-title">Categories</h5>
+								<h5 class="widget-title">Brands</h5>
 							</div>
 							<div class="widget-content">
 								<ul class="category-list clearfix">
-									<li><a href="shop-product-details/">Cloud Solution</a></li>
-									<li><a href="shop-product-details/">Cyber Data</a></li>
-									<li><a href="shop-product-details/">SEO Marketing</a></li>
-									<li><a href="shop-product-details/">UI/UX Design</a></li>
-									<li><a href="shop-product-details/">Web Development</a></li>
-									<li><a href="shop-product-details/">Artifical Intelligence</a></li>
+									{% for brand in brands %}
+										<li><a href="{{ brand.get_absolute_url }}">{{ brand }}</a></li>
+									{% endfor %}
 								</ul>
 							</div>
 						</div>
+						{% endif %}
 						<div class="sidebar-widget price-filters">
 							<div class="widget-title">
 								<h5 class="widget-title">Filter by Price</h5>
@@ -42,33 +45,32 @@
 								<div class="clearfix">
 									<p>Price:</p>
 									<div class="title"></div>
-									<div class="input"><input type="text" class="property-amount" name="field-name" readonly></div>
-									<input type="submit" value="Filter">
+									<form action="" method="POST">
+										{% csrf_token %}
+										<div class="input">
+											<input type="text" class="property-amount" name="range" readonly required>
+										</div> <br>
+										<input type="submit" value="Filter">
+									</form>
 								</div>
 							</div>
 						</div>
+						{% if popular_products %}
 						<div class="sidebar-widget post-widget">
 							<div class="widget-title">
 								<h5 class="widget-title">Popular Products</h5>
 							</div>
 							<div class="post-inner">
-								<div class="post">
-									<figure class="post-thumb"><a href="shop-details.html"><img src="/static/images/resource/products/thumb-1.jpg" alt=""></a></figure>
-									<a href="shop-product-details/">Best Headset</a>
-									<span class="price">$45.00</span>
-								</div>
-								<div class="post">
-									<figure class="post-thumb"><a href="shop-details.html"><img src="/static/images/resource/products/thumb-2.jpg" alt=""></a></figure>
-									<a href="shop-product-details/">Quality Battery</a>
-									<span class="price">$34.00</span>
-								</div>
-								<div class="post">
-									<figure class="post-thumb"><a href="shop-details.html"><img src="/static/images/resource/products/thumb-3.jpg" alt=""></a></figure>
-									<a href="shop-product-details/">Smart Watch</a>
-									<span class="price">$29.00</span>
-								</div>
+								{% for post in popular_products %}
+									<div class="post">
+										<figure class="post-thumb"><a href="{{ post.get_absolute_url }}"><img src="{% if post.image %}{{ post.image.url }}{% else %}/static/images/resource/products/1.jpg{% endif %}" alt=""></a></figure>
+										<a href="{{ post.get_absolute_url }}">{{ post.title|truncatechars:30 }}</a>
+										<span class="price">Ksh. {{ post.current_price }}</span>
+									</div>
+								{% endfor %}
 							</div>
 						</div>
+						{% endif %}
 					</div>
 				</div>
 				<div class="col-lg-9 col-md-12 col-sm-12 content-side">
@@ -78,142 +80,38 @@
 						<div class="filters clearfix">
 							<ul class="filter-tabs filter-btns clearfix">
 								<li class="active filter" data-role="button" data-filter="all">All</li>
-								<li class="filter" data-role="button" data-filter=".dairy">Cyber</li>
-								<li class="filter" data-role="button" data-filter=".pantry">Digital</li>
-								<li class="filter" data-role="button" data-filter=".meat">Software</li>
-								<li class="filter" data-role="button" data-filter=".fruit">Technology</li>
-								<li class="filter" data-role="button" data-filter=".vagetables">Development</li>
+								{% for product_category in product_categories %}
+									<li class="filter" data-role="button" data-filter=".{{ product_category }}">{{ product_category }}</li>
+								{% endfor %}
 							</ul>
 						</div>
 
 						<div class="filter-list row">
-							<!--Product Block-->
-							<div class="product-block all mix pantry fruit col-lg-4 col-md-6 col-sm-12">
-								<div class="inner-box">
-									<div class="image"><a href="shop-product-details/"><img src="/static/images/resource/products/1.jpg" alt=""/></a></div>
-									<div class="content">
-										<h4><a href="shop-product-details/">Headphone</a></h4>
-										<span class="price">$32.00</span>
-										<span class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
+							{% if products %}
+								{% for product in products %}
+								<!--Product Block-->
+									<div class="product-block all mix pantry {{ product.category }} col-lg-4 col-md-6 col-sm-12" title="{{ product }}">
+										<div class="inner-box">
+											<div class="image"><a href="{{ product.get_absolute_url }}"><img src="{% if product.image %}{{ product.image.url }}{% else %}/static/images/resource/products/1.jpg{% endif %}" alt=""/></a></div>
+											<div class="content">
+												<h4><a href="{{ product.get_absolute_url }}">{{ product.title|truncatechars:15 }}</a></h4>
+												<span class="price">
+													<del class="text-danger">{% if product.discount %}Ksh. {{ product.get_initial_price }}{% endif %}</del> <br>
+													Ksh. {{ product.current_price }}
+												</span>
+												<span class="rating">
+													{% if product.in_stock %}<span class="alert alert-success py-0">{{ product.in_stock }} in stock</span>{% else %}<span class="alert alert-danger py-0">Out of Stock</span>{% endif %}
+													{% if product.discount %}<span class="alert alert-info py-0">{{ product.discount }}% OFF</span>{% endif %}
+												</span>
+											</div>
+											<div class="icon-box">
+												<a href="{{ product.get_absolute_url }}" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
+												<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
+											</div>
+										</div>
 									</div>
-									<div class="icon-box">
-										<a href="shop-product-details/" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-										<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-									</div>
-								</div>
-							</div>
-
-							<!--Product Block-->
-							<div class="product-block all mix dairy meat fruit col-lg-4 col-md-6 col-sm-12">
-								<div class="inner-box">
-									<div class="image"><a href="shop-product-details/"><img src="/static/images/resource/products/2.jpg" alt=""/></a></div>
-									<div class="content">
-										<h4><a href="shop-product-details/">Lagage</a></h4>
-										<span class="price">$52.00</span>
-										<span class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
-									</div>
-									<div class="icon-box">
-										<a href="shop-product-details/" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-										<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-									</div>
-								</div>
-							</div>
-
-							<!--Product Block-->
-							<div class="product-block all mix pantry fruit vagetables col-lg-4 col-md-6 col-sm-12">
-								<div class="inner-box">
-									<div class="image"><a href="shop-product-details/"><img src="/static/images/resource/products/3.jpg" alt=""/></a></div>
-									<div class="content">
-										<h4><a href="shop-product-details/">Watch</a></h4>
-										<span class="price">$43.00</span>
-										<span class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
-									</div>
-									<div class="icon-box">
-										<a href="shop-product-details/" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-										<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-									</div>
-								</div>
-							</div>
-
-							<!--Product Block-->
-							<div class="product-block all mix dairy meat vagetables col-lg-4 col-md-6 col-sm-12">
-								<div class="inner-box">
-									<div class="image"><a href="shop-product-details/"><img src="/static/images/resource/products/4.jpg" alt=""/></a></div>
-									<div class="content">
-										<h4><a href="shop-product-details/">Headset</a></h4>
-										<span class="price">$22.00</span>
-										<span class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
-									</div>
-									<div class="icon-box">
-										<a href="shop-product-details/" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-										<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-									</div>
-								</div>
-							</div>
-
-							<!--Product Block-->
-							<div class="product-block all mix pantry meat fruit col-lg-4 col-md-6 col-sm-12">
-								<div class="inner-box">
-									<div class="image"><a href="shop-product-details/"><img src="/static/images/resource/products/5.jpg" alt=""/></a></div>
-									<div class="content">
-										<h4><a href="shop-product-details/">Battery</a></h4>
-										<span class="price">$34.00</span>
-										<span class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
-									</div>
-									<div class="icon-box">
-										<a href="shop-product-details/" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-										<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-									</div>
-								</div>
-							</div>
-
-							<!--Product Block-->
-							<div class="product-block all mix dairy pantry col-lg-4 col-md-6 col-sm-12">
-								<div class="inner-box">
-									<div class="image"><a href="shop-product-details/"><img src="/static/images/resource/products/6.jpg" alt=""/></a></div>
-									<div class="content">
-										<h4><a href="shop-product-details/">Charger</a></h4>
-										<span class="price">$52.00</span>
-										<span class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
-									</div>
-									<div class="icon-box">
-										<a href="shop-product-details/" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-										<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-									</div>
-								</div>
-							</div>
-
-							<!--Product Block-->
-							<div class="product-block all mix fruit vagetables col-lg-4 col-md-6 col-sm-12">
-								<div class="inner-box">
-									<div class="image"><a href="shop-product-details/"><img src="/static/images/resource/products/7.jpg" alt=""/></a></div>
-									<div class="content">
-										<h4><a href="shop-product-details/">USB Cable</a></h4>
-										<span class="price">$25.00</span>
-										<span class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
-									</div>
-									<div class="icon-box">
-										<a href="shop-product-details/" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-										<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-									</div>
-								</div>
-							</div>
-
-							<!--Product Block-->
-							<div class="product-block all mix dairy pantry meat vagetables col-lg-4 col-md-6 col-sm-12">
-								<div class="inner-box">
-									<div class="image"><a href="shop-product-details/"><img src="/static/images/resource/products/8.jpg" alt=""/></a></div>
-									<div class="content">
-										<h4><a href="shop-product-details/">SD Card</a></h4>
-										<span class="price">$30.00</span>
-										<span class="rating"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
-									</div>
-									<div class="icon-box">
-										<a href="shop-product-details/" class="ui-btn like-btn"><i class="fa fa-heart"></i></a>
-										<a href="shop-cart.html" class="ui-btn add-to-cart"><i class="fa fa-shopping-cart"></i></a>
-									</div>
-								</div>
-							</div>
+								{% endfor %}
+							{% endif %}
 						</div>
 					</div>
 				</div>
