--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -9,13 +9,13 @@
 
 <p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
 {% else %}
-<h1>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h1>
+<h2 class="text-center">{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h2>
 
-<p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from {{ provider }}.{% endblocktrans %}</p>
+<p class="text-center">{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from {{ provider }}.{% endblocktrans %}</p>
 {% endif %}
 
 <form method="post">
   {% csrf_token %}
-  <button type="submit" class="theme-btn btn-style-one">{% trans "Continue" %}</button>
+  <button type="submit" class="theme-btn btn-style-one w-100">{% trans "Continue" %}</button>
 </form>
 {% endblock %}
